added linkedin icon

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ navigation:
 social:
    github: neuromusic
    twitter: neuromusic
+   linkedin: justinkiggins
    email: justin.kiggins@gmail.com
 
 google_analytics: "UA-344915-7"
