--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ paginate: 5
 navigation:
  - title: Home
    url: /index.html
+ - title: Blog
+   url: /blog
  - title: Contact
    url: /contact
 
