--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Justin Kiggins
 description: neuroscience via engineering via music
 
-url: http://neuromusic.github.io
+url: http://www.justinkiggins.com
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
@@ -25,6 +25,7 @@ social:
    email: justin.kiggins@gmail.com
 
 google_analytics: "UA-344915-7"
+feedburner: http://feeds.feedburner.com/justinkiggins-blog
 
 
 # RSS
