added twitter cards

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Justin Kiggins
-description: neuroscience via engineering via music
+description: Full Stack Neuroscience
 
 url: http://www.justinkiggins.com
 baseurl: ""
