updated markdown settings to be 3.0 compliant

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
-markdown: redcarpet
-highlighter: pygments
+# markdown: redcarpet
+highlighter: rouge
 paginate: 5
 
 navigation:
